--- a/index.html
+++ b/index.html
@@ -188,6 +188,18 @@
                     <div class="row">
                         <div class="col-md-8">
                             <div class="notificationMore">
+                                 <a href="DetailsPages/OdishaTeacherPost.html" class="nav-link">
+                                    <div class="firstBoundry">
+                                        <div class="secondBoundary">
+                                           <img src="Images/OdishaTeacherPost.webp" alt="" height="50px" width="50px">
+                                        </div>
+                                        <div class="secondBoundary">
+                                            <h6>Odisha Teacher Post For </h6>
+                                            <p>Music, Art And PT Teacher Posts
+                                            </p>
+                                        </div>
+                                    </div>
+                                </a>
                                  <a href="DetailsPages/OdishaCollectorOffice.html" class="nav-link">
                                     <div class="firstBoundry">
                                         <div class="secondBoundary">
