--- a/DetailsPages/OdishaTeacherPost.html
+++ b/DetailsPages/OdishaTeacherPost.html
@@ -267,12 +267,12 @@
 
       <p>For more information, please visit the official website.</p>
 
-      <h2 style="color: red; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1)">
+      <h2 style="color: red; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1)"></h2>
         <ul>
             <li>Apply Start Date - Already Started </li>
             <li> Apply Last Date : 31 December 2023</li>
         </ul>
-      </h2>
+      
 
       <h2 style="color: red; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1)">
         IMPORTANT LINKS
