--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                                         </div>
                                         <div class="thirdBoundary">
                                             <h6>Odisha Collector Office!</h6>
-                                            <p>  Apply Offline For Peon, 
+                                            <p>For Peon, 
                                             Superintendent And Sweeper Postsy</p>
                                             
                                         </div>
@@ -232,7 +232,7 @@
                                     </div>
                                     <div class="secondBoundary">
                                         <h6>Bank Peon Post Recruitment  </h6>
-                                        <p>8th, 10th Pass ! Apply Online For 484 Posts
+                                        <p>8th, 10th - Online For 484 Posts
                                         </p>
                                     </div>
                                 </div>
