--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                                         <img src="Images/IndianRailway.jpg" alt="" height="50px" width="50px">
                                     </div>
                                     <div class="secondBoundary">
-                                        <h6>Indian Railway 10th Pass Recruitment ! </h6>
+                                        <h6>Indian Railway 10th Pass </h6>
                                         <p>Apply Online For 3105 Posts
                                         </p>
                                     </div>
@@ -267,8 +267,8 @@
                                         <img src="Images/PostOffice.jpg" alt="" height="50px" width="50px">
                                     </div>
                                     <div class="secondBoundary">
-                                        <h6>India Post Office New Recruitment </h6>
-                                        <p>Salary 19,900 ! 10th Pass Apply Now
+                                        <h6>India Post Office New</h6>
+                                        <p>10th Pass Apply Now
                                         </p>
                                     </div>
                                 </div>
