--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
                                         </div>
                                         <div class="thirdBoundary">
                                             <h6>Odisha Collector Office!</h6>
-                                            <p>For Peon, 
-                                            Superintendent And Sweeper Postsy</p>
+                                            <p>Peon, 
+                                            Superintendent And Sweeper</p>
                                             
                                         </div>
                                     </div>
