--- a/index.html
+++ b/index.html
@@ -188,6 +188,18 @@
                     <div class="row">
                         <div class="col-md-8">
                             <div class="notificationMore">
+                                <a href="DetailsPages/OPHWCJuniorAsst.html" class="nav-link ">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="Images/OPHWCJuniorAsst.png" alt="" height="50px" width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6>OPHWC Junior Assistant  </h6>
+                                        <p> Salary 63,200 Per Month 
+                                        </p>
+                                    </div>
+                                </div>
+                            </a>
                                  <a href="DetailsPages/OdishaTeacherPost.html" class="nav-link">
                                     <div class="firstBoundry">
                                         <div class="secondBoundary">
