--- a/LatestNotification.html
+++ b/LatestNotification.html
@@ -63,6 +63,32 @@
     <div class="container-fluid">
         <!-- Cards-->
         <div class="row">
+               <div class="col-md-4">
+                <div class="card p-2">
+                    <div class="card-header">
+                        <h4 style="color: blue;">Income Tax Department Recruitment 2024 !</h4>
+                        <h5> <span class="badge bg-dark">New</span> <span class="badge bg-info"><a class="nav-link"
+                                    href="DetailsPages/OPHWCJuniorAsst.html">View Details</a></span>
+                        </h5>
+                    </div>
+                    <div class="card-body">
+                        <h4 style="color: blue;"> DEPARTMENT NEW</h4>
+                        <p style="color: green;">Apply Online For Inspector, MTS And Clerk Posts </p>
+
+                      
+                                <h5> <a class="nav-link"
+                                    href="https://mumbai-itax-sportsrecr23.com/">
+                                    Applay Online <span class="badge bg-danger">Link</span></a></h5>
+                                    <h5> <a class="nav-link"
+                                        href="https://drive.google.com/file/d/15lEjPvNmBuM0lMTcPfUGDhJp3coY_Rsq/view">
+                                        Notification Pdf Link<span class="badge bg-success">Link</span></a></h5>
+
+                    </div>
+                    <div class="card-footer">
+                        <h4 style="color: black;"> </h4>
+                    </div>
+                </div>
+            </div>
              <div class="col-md-4">
                 <div class="card p-2">
                     <div class="card-header">
