--- a/index.html
+++ b/index.html
@@ -188,6 +188,18 @@
                     <div class="row">
                         <div class="col-md-8">
                             <div class="notificationMore">
+                                <a href="DetailsPages/OSSCExciseSubInspector.html" class="nav-link ">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="Images/OdishaImage.png" alt="" height="50px" width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6>OSSC Excise Sub Inspector </h6>
+                                       
+                                        
+                                    </div>
+                                </div>
+                            </a>
                                   <a href="DetailsPages/IncomeTaxDepartment.html" class="nav-link ">
                                 <div class="firstBoundry">
                                     <div class="secondBoundary">
