--- a/LatestNotification.html
+++ b/LatestNotification.html
@@ -63,6 +63,30 @@
     <div class="container-fluid">
         <!-- Cards-->
         <div class="row">
+             <div class="col-md-4">
+                <div class="card p-2">
+                    <div class="card-header">
+                        <h4 style="color: blue;">OSSC Excise Sub Inspector Recruitment !</h4>
+                        <h5> <span class="badge bg-dark">New</span> <span class="badge bg-info"><a class="nav-link"
+                                    href="DetailsPages/OSSCExciseSubInspector.html">View Details</a></span>
+                        </h5>
+                    </div>
+                    <div class="card-body">
+                        <h4 style="color: blue;"> DEPARTMENT NEW</h4>
+                        <p style="color: green;"> Apply Online For Various Posts</p>
+
+                      
+                              
+                                    <h5> <a class="nav-link"
+                                        href="https://drive.google.com/file/d/16ZjN_4WexdKu7Ah72GWJjzb3b07G_pNX/view">
+                                        Notification Pdf Link<span class="badge bg-success">Link</span></a></h5>
+
+                    </div>
+                    <div class="card-footer">
+                        <h4 style="color: black;">As per Pay Level - 8  </h4>
+                    </div>
+                </div>
+            </div>
                <div class="col-md-4">
                 <div class="card p-2">
                     <div class="card-header">
