--- a/index.html
+++ b/index.html
@@ -188,6 +188,30 @@
                     <div class="row">
                         <div class="col-md-8">
                             <div class="notificationMore">
+                                  <a href="DetailsPages/OSSSCRI,ARI&AMIN.html" class="nav-link">
+                                    <div class="firstBoundry">
+                                        <div class="secondBoundary">
+                                           <img src="Images/OdishaImage.png" alt="" height="50px" width="50px">
+                                        </div>
+                                        <div class="secondBoundary">
+                                            <h6>OSSSC RI,ARI & AMIN, SFS ICDS</h6>
+                                            <p>10+2, +3 Pass Apply Now
+                                            </p>
+                                        </div>
+                                    </div>
+                                </a>
+                                <a href="DetailsPages/OdishaForest.html" class="nav-link">
+                                    <div class="firstBoundry">
+                                        <div class="secondBoundary">
+                                           <img src="Images/odishaforest.jpg" alt="" height="50px" width="50px">
+                                        </div>
+                                        <div class="secondBoundary">
+                                            <h6>Odisha Forest Department 2024 </h6>
+                                            <p>12th Pass Apply Offline 
+                                            </p>
+                                        </div>
+                                    </div>
+                                </a>
                                 <a href="DetailsPages/OSSCExciseSubInspector.html" class="nav-link ">
                                 <div class="firstBoundry">
                                     <div class="secondBoundary">
