--- a/index.html
+++ b/index.html
@@ -160,6 +160,8 @@
 
             <!-- content-->
             <main class="col-md-9 col-lg-10 items-container mt-3">
+<marquee  style="color:blue" behavior="scroll" direction="left">Happy New Year 2024</marquee>
+
 
 
                 <marquee behavior="scroll" direction="left">All New Jobs Are here,Subscribe Our Channel</marquee>
