--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
             <!-- content-->
             <main class="col-md-9 col-lg-10 items-container mt-3">
-<marquee  style="color:blue" behavior="scroll" direction="left">Happy New Year 2024</marquee>
+<marquee  style="color:blue" behavior="scroll" direction="left"><h4>           Happy New Year 2024</h4></marquee>
 
 
 
