--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
 
 
 
-                <marquee behavior="scroll" direction="left">All New Jobs Are here,Subscribe Our Channel</marquee>
-
+               <!--   <marquee behavior="scroll" direction="left">All New Jobs Are here,Subscribe Our Channel</marquee>
+-->
 
                 <div class="joinLinks1">
                     <a class="nav-link" href="https://www.youtube.com/@Odishaalljob">
