--- a/index.html
+++ b/index.html
@@ -190,6 +190,18 @@
                     <div class="row">
                         <div class="col-md-8">
                             <div class="notificationMore">
+                                 <a href="SubPages/2023/January/DetailsPages/OPSCPGT.html" class="nav-link ">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="SubPages/2023/January/images/OdishaImage.png" alt="" height="50px" width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6>OPSC PGT Recruitment 2024 </h6>
+                                       <p>1375 Post Graduate Teacher Posts</p>
+                                        
+                                    </div>
+                                </div>
+                            </a>
                                   <a href="DetailsPages/OSSSCRI,ARI&AMIN.html" class="nav-link">
                                     <div class="firstBoundry">
                                         <div class="secondBoundary">
