--- a/LatestNotification.html
+++ b/LatestNotification.html
@@ -63,6 +63,30 @@
     <div class="container-fluid">
         <!-- Cards-->
         <div class="row">
+              <div class="col-md-4">
+                <div class="card p-2">
+                    <div class="card-header">
+                        <h4 style="color: blue;">OPSC PGT Recruitment 2024</h4>
+                        <h5> <span class="badge bg-dark">New</span> <span class="badge bg-info"><a class="nav-link"
+                                    href="SubPages/2023/January/DetailsPages/OPSCPGT.html">View Details</a></span>
+                        </h5>
+                    </div>
+                    <div class="card-body">
+                        <h4 style="color: blue;"> DEPARTMENT NEW</h4>
+                        <p style="color: green;"> For 1375 Post Graduate Teacher Posts</p>
+
+                      
+                              
+                                    <h5> <a class="nav-link"
+                                        href="https://drive.google.com/file/d/18WKGvTmpA_6kKDlslG47GZo4tVM_FvL0/view">
+                                        Notification Pdf Link<span class="badge bg-success">Link</span></a></h5>
+
+                    </div>
+                    <div class="card-footer">
+                        <p style="color: black;">As per OPSC good salary is paid. </p>
+                    </div>
+                </div>
+            </div>
              <div class="col-md-4">
           <div class="card p-2">
             <div class="card-header">
