--- a/index.html
+++ b/index.html
@@ -190,6 +190,18 @@
                     <div class="row">
                         <div class="col-md-8">
                             <div class="notificationMore">
+                                <a href="SubPages/2024/January/DetailsPages/OdishaGramPanchayat.html" class="nav-link ">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="SubPages/2024/January/images/OdishaImage.png" alt="" height="50px" width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6>Odisha Gram Panchayat Recruitment</h6>
+                                       <p> Apply Offline For Various Posts</p>
+                                        
+                                    </div>
+                                </div>
+                            </a>
                                  <a href="SubPages/2024/January/DetailsPages/OPSCPGT.html" class="nav-link ">
                                 <div class="firstBoundry">
                                     <div class="secondBoundary">
