--- a/LatestNotification.html
+++ b/LatestNotification.html
@@ -63,6 +63,30 @@
     <div class="container-fluid">
         <!-- Cards-->
         <div class="row">
+               <div class="col-md-4">
+                <div class="card p-2">
+                    <div class="card-header">
+                        <h4 style="color: blue;">Odisha Gram Panchayat Recruitment 2024 </h4>
+                        <h5> <span class="badge bg-dark">New</span> <span class="badge bg-info"><a class="nav-link"
+                                    href="SubPages/2024/January/DetailsPages/OdishaGramPanchayat.html">View Details</a></span>
+                        </h5>
+                    </div>
+                    <div class="card-body">
+                        <h4 style="color: blue;"> DEPARTMENT NEW</h4>
+                        <p style="color: green;"> ! Apply Offline For Various Posts</p>
+
+                      
+                              
+                                    <h5> <a class="nav-link"
+                                        href="https://drive.google.com/file/d/18ynAnW87EBmTgeg6L7ZbWOHvePCSwr-t/view">
+                                        Notification Pdf Link<span class="badge bg-danger">Download</span></a></h5>
+
+                    </div>
+                    <div class="card-footer">
+                        <p style="color: black;">See the Pdf </p>
+                    </div>
+                </div>
+            </div>
               <div class="col-md-4">
                 <div class="card p-2">
                     <div class="card-header">
