--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                                         <img src="SubPages/2024/January/images/OdishaImage.png" alt="" height="50px" width="50px">
                                     </div>
                                     <div class="secondBoundary">
-                                        <h6>Odisha Gram Panchayat Recruitment</h6>
+                                        <h6>Odisha Gram Panchayat Recru..</h6>
                                        <p> Apply Offline For Various Posts</p>
                                         
                                     </div>
