--- a/index.html
+++ b/index.html
@@ -332,6 +332,7 @@
                             </div>
                         </div>
                         <div class="col-md-6">
+                            <div class="notificationMore">
 <a href="DetailsPages/BankPeonCentralBank.html" class="nav-link ">
                                 <div class="firstBoundry">
                                     <div class="secondBoundary">
@@ -469,6 +470,7 @@
                                     </div>
                                 </div>
                             </a>
+                                  </div>
                         </div>
                     </div>
                  
