--- a/index.html
+++ b/index.html
@@ -190,6 +190,9 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="notificationMore">
+                          <!--  BADGE -->
+                                <span class="badge rounded-pill bg-secondary">New Jobs</span>
+                                  <!--  BADGE -->
                                 <a href="SubPages/2024/January/DetailsPages/RPF.html" class="nav-link ">
                                 <div class="firstBoundry">
                                     <div class="secondBoundary">
