--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                         <div class="col-md-6">
                             <div class="notificationMore">
                           <!--  BADGE -->
-                                <span class="badge rounded-pill bg-secondary p-1"  style="margin-left: 10px">New Jobs</span>
+                                <span class="badge rounded-pill bg-secondary p-1"  style="margin-left=10px">New Jobs</span>
                                   <!--  BADGE -->
                                 <a href="SubPages/2024/January/DetailsPages/RPF.html" class="nav-link ">
                                 <div class="firstBoundry">
