--- a/LatestNotification.html
+++ b/LatestNotification.html
@@ -66,6 +66,33 @@
              <div class="col-md-4">
                 <div class="card p-2">
                     <div class="card-header">
+                        <h4 style="color: blue;">Odisha Panchayat Level Jogana Sahayak</h4>
+                        <h5> <span class="badge bg-dark">New</span> <span class="badge bg-info"><a class="nav-link"
+                                    href="SubPages/2024/January/DetailsPages/JoganaSahayak.html">View
+                                    Details</a></span>
+                        </h5>
+                    </div>
+                    <div class="card-body">
+                        <h4 style="color: blue;"> DEPARTMENT NEW</h4>
+                        <p style="color: green;">10th Pass Apply Offline Now</p>
+
+
+
+                        <h5> <a class="nav-link" href="https://drive.google.com/file/d/1AF4PZkii0CftiUWuUslA-nfciWOtckBY/view">
+                              Notification Pdf Link<span class="badge bg-danger">Go</span></a></h5>
+
+                       
+
+
+                    </div>
+                    <div class="card-footer">
+                        <p style="color: black;">6,000/- to 30,000/- Per Month </p>
+                    </div>
+                </div>
+            </div>
+             <div class="col-md-4">
+                <div class="card p-2">
+                    <div class="card-header">
                         <h4 style="color: blue;">Jindal Steel Plant Recruitment 2024 </h4>
                         <h5> <span class="badge bg-dark">New</span> <span class="badge bg-info"><a class="nav-link"
                                     href="SubPages/2024/January/DetailsPages/JindalSteelPlant.html">View Details</a></span>
