--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
 
             <!-- content-->
             <main class="col-md-9 col-lg-10 items-container mt-3">
+                <div id="liveTime"></div>
 <marquee  style="color:blue" behavior="scroll" direction="left"><h4>           Happy New Year 2024</h4></marquee>
 
 
