--- a/index.html
+++ b/index.html
@@ -195,6 +195,30 @@
                           <!--  BADGE -->
                                 <span class="badge rounded-pill bg-secondary p-1"  style="margin:10px">New Jobs</span>
                                   <!--  BADGE -->
+                                 <a href="SubPages/2024/January/DetailsPages/PostalRecruitment.html" class="nav-link ">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="SubPages/2024/January/images/postalrecquirment.jpg" alt="" height="50px" width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6>Postal Recruitment 2024</h6>
+                                       <p>10th Pass Apply Now</p>
+                                        
+                                    </div>
+                                </div>
+                            </a>
+                            <a href="SubPages/2024/January/DetailsPages/TATASteelFreshers.html" class="nav-link ">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="SubPages/2024/January/images/tatasteelrequrment.jpg" alt="" height="50px" width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6>TATA Steel Freshers Recruit...</h6>
+                                       <p> 2024 ! Apply Online</p>
+                                        
+                                    </div>
+                                </div>
+                            </a>
                                   <a href="SubPages/2024/January/DetailsPages/JoganaSahayak.html" class="nav-link ">
                                 <div class="firstBoundry">
                                     <div class="secondBoundary">
