--- a/LatestNotification.html
+++ b/LatestNotification.html
@@ -66,6 +66,56 @@
              <div class="col-md-4">
                 <div class="card p-2">
                     <div class="card-header">
+                        <h4 style="color: blue;">Postal Recruitment 2024</h4>
+                        <h5> <span class="badge bg-dark">New</span> <span class="badge bg-info"><a class="nav-link"
+                                    href="SubPages/2024/January/DetailsPages/PostalRecruitment.html">View
+                                    Details</a></span>
+                        </h5>
+                    </div>
+                    <div class="card-body">
+                        <h4 style="color: blue;"> DEPARTMENT NEW</h4>
+                        <p style="color: green;"> 10t Pass Apply Now</p>
+
+
+
+                        <h5> <a class="nav-link" href="https://drive.google.com/file/d/1AU57lNAoaxdR1CP0mnYmYzS-3BPX8Obd/view">
+                            Notification PDF Link<span class="badge bg-danger">view</span></a></h5>
+                    </div>
+                    <div class="card-footer">
+                        <p style="color: black;">Salary up to 63,200 Per Month</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card p-2">
+                    <div class="card-header">
+                        <h4 style="color: blue;">TATA Steel Freshers Recruitment 2024</h4>
+                        <h5> <span class="badge bg-dark">New</span> <span class="badge bg-info"><a class="nav-link"
+                                    href="SubPages/2024/January/DetailsPages/TATASteelFreshers.html">View
+                                    Details</a></span>
+                        </h5>
+                    </div>
+                    <div class="card-body">
+                        <h4 style="color: blue;"> DEPARTMENT NEW</h4>
+                        <p style="color: green;">Apply Online For Various Posts</p>
+
+
+
+                        <h5> <a class="nav-link" href="https://tslhr.tatasteel.co.in/recruit/AppList.aspx">
+                                Applay Online Link<span class="badge bg-danger">Go</span></a></h5>
+                        <h5> <a class="nav-link"
+                                href="https://cdn.digialm.com/EForms/configuredHtml/31595/87364/Registration.html">
+                                Registration Link<span class="badge bg-danger">Go</span></a></h5>
+
+                    </div>
+                    <div class="card-footer">
+                        <p style="color: black;">Good Salary is paid by TATA Steel Power Ltd.</p>
+                    </div>
+                </div>
+            </div>
+             <div class="col-md-4">
+                <div class="card p-2">
+                    <div class="card-header">
                         <h4 style="color: blue;">Odisha Panchayat Level Jogana Sahayak</h4>
                         <h5> <span class="badge bg-dark">New</span> <span class="badge bg-info"><a class="nav-link"
                                     href="SubPages/2024/January/DetailsPages/JoganaSahayak.html">View
