--- a/index.html
+++ b/index.html
@@ -196,6 +196,19 @@
                           <!--  BADGE -->
                                 <span class="badge rounded-pill bg-secondary p-1"  style="margin:10px">New Jobs</span>
                                   <!--  BADGE -->
+                                <a href="SubPages/2024/January/DetailsPages/OdishaBlockLevelBankMitra.html" class="nav-link ">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="SubPages/2024/January/images/naveenPattnayak.jpg" alt="" height="50px"
+                                            width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6>Block Level Bank Mitra</h6>
+                                        <p> 10th,12th Pass Apply</p>
+
+                                    </div>
+                                </div>
+                            </a>
                                 <a href="SubPages/2024/January/DetailsPages/OdishaGovtPeon.html" class="nav-link ">
                                 <div class="firstBoundry">
                                     <div class="secondBoundary">
