--- a/LatestNotification.html
+++ b/LatestNotification.html
@@ -63,6 +63,30 @@
     <div class="container-fluid">
         <!-- Cards-->
         <div class="row">
+            <div class="col-md-4">
+                <div class="card p-2">
+                    <div class="card-header">
+                        <h4 style="color: blue;">Odisha Block Level Bank Mitra Recruitment</h4>
+                        <h5> <span class="badge bg-dark">New</span> <span class="badge bg-info"><a class="nav-link"
+                                    href="SubPages/2024/January/DetailsPages/OdishaBlockLevelBankMitra.html">View
+                                    Details</a></span>
+                        </h5>
+                    </div>
+                    <div class="card-body">
+                        <h4 style="color: blue;"> DEPARTMENT NEW</h4>
+                        <p style="color: green;">10th,12th Pass Apply Offline Now</p>
+
+
+
+                        <h5> <a class="nav-link"
+                                href="https://drive.google.com/file/d/1BKq26Z3DlUm2t9GkzXcrYV6__Ubfo6Yn/view">
+                                Notification PDF Link<span class="badge bg-success"> view</span></a></h5>
+                    </div>
+                    <div class="card-footer">
+                        <p style="color: black;">6,000/-  per month.</p>
+                    </div>
+                </div>
+            </div>
              <div class="col-md-4">
                 <div class="card p-2">
                     <div class="card-header">
