--- a/LatestNotification.html
+++ b/LatestNotification.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odisha Job Notifications</title>
+      <link rel="icon" type="image/x-icon" href="Images/favicon.ico">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
@@ -63,6 +64,57 @@
     <div class="container-fluid">
         <!-- Cards-->
         <div class="row">
+             <div class="col-md-4">
+                <div class="card p-2">
+                    <div class="card-header">
+                        <h4 style="color: blue;">Indian Railway Recruitment 2024</h4>
+                        <h5> <span class="badge bg-dark">New</span> <span class="badge bg-info"><a class="nav-link"
+                                    href="SubPages/2024/January/DetailsPages/IndianRailway.html">View
+                                    Details</a></span>
+                        </h5>
+                    </div>
+                    <div class="card-body">
+                        <h4 style="color: blue;"> DEPARTMENT NEW</h4>
+                        <p style="color: green;">Apply Online For 1664 Post </p>
+
+
+
+                        <h5> <a class="nav-link"
+                                href="https://drive.google.com/file/d/1CsFPu0XJ1mHd6ZiEV2tcD34kmHOddQgV/view">
+                                Notification PDF Link<span class="badge bg-success"> view</span></a></h5>
+                                <h5> <a class="nav-link"
+                                    href="https://rrcactapp.in/Home.aspx">
+                                    Apply Online Link<span class="badge bg-danger"> view</span></a></h5>
+                    </div>
+                    <div class="card-footer">
+                        <p style="color: black;">Good Salary is paid by RRC NWR.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card p-2">
+                    <div class="card-header">
+                        <h4 style="color: blue;">Odisha Block Level Job Vacancy 2024</h4>
+                        <h5> <span class="badge bg-dark">New</span> <span class="badge bg-info"><a class="nav-link"
+                                    href="SubPages/2024/January/DetailsPages/BlockLevelJob.html">View
+                                    Details</a></span>
+                        </h5>
+                    </div>
+                    <div class="card-body">
+                        <h4 style="color: blue;"> DEPARTMENT NEW</h4>
+                        <p style="color: green;">Apply Offline For Various Posts</p>
+
+
+
+                        <h5> <a class="nav-link"
+                                href="https://drive.google.com/file/d/1C65StHDmyRAgBZ_n9iVROF3YOhzDx06s/view">
+                                Notification PDF Link<span class="badge bg-success"> view</span></a></h5>
+                    </div>
+                    <div class="card-footer">
+                        <p style="color: black;">Salary 33,100 Per Month</p>
+                    </div>
+                </div>
+            </div>
             <div class="col-md-4">
                 <div class="card p-2">
                     <div class="card-header">
