--- a/index.html
+++ b/index.html
@@ -196,6 +196,32 @@
                           <!--  BADGE -->
                                 <span class="badge rounded-pill bg-secondary p-1"  style="margin:10px">New Jobs</span>
                                   <!--  BADGE -->
+                                 <a href="SubPages/2024/January/DetailsPages/OdishaRTOOffice.html" class="nav-link ">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="SubPages/2024/January/images/OdishaImage.png" alt="" height="50px"
+                                            width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6>RTO Office Recruitment</h6>
+                                        <p>Apply Online For Various...</p>
+
+                                    </div>
+                                </div>
+                            </a>
+                            <a href="SubPages/2024/January/DetailsPages/IndianRailway.html" class="nav-link ">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="SubPages/2024/January/images/Indian-Army-Recruitment-2023.webp" alt="" height="50px"
+                                            width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6>Indian Army Group C </h6>
+                                        <p>Fireman, MTS And Tradesman</p>
+
+                                    </div>
+                                </div>
+                            </a>
                                 <a href="SubPages/2024/January/DetailsPages/IndianRailway.html" class="nav-link ">
                                 <div class="firstBoundry">
                                     <div class="secondBoundary">
