--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                             <a href="SubPages/2024/January/DetailsPages/IndianArmyGroupC.html" class="nav-link ">
                                 <div class="firstBoundry">
                                     <div class="secondBoundary">
-                                        <img src="SubPages/2024/January/images/Indian-Army-Recruitment-2023.webp" alt="" height="50px"
+                                        <img src="SubPages/2024/January/images/Indian-Army-Recruitment-2023.jpg" alt="" height="50px"
                                             width="50px">
                                     </div>
                                     <div class="secondBoundary">
