--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                                     </div>
                                     <div class="secondBoundary">
                                         <h6>RTO Office Recruitment</h6>
-                                        <p>Apply Online For Various...</p>
+                                        <p style="margin: 0;">Apply Online For Various...</p>
  <p id="currentDate" style="font-size: 12px; color: #888;"></p>
                                     </div>
                                 </div>
@@ -217,7 +217,7 @@
                                     </div>
                                     <div class="secondBoundary">
                                         <h6>Indian Army Group C </h6>
-                                        <p>Fireman, MTS And Tradesman</p>
+                                        <p style="margin: 0;">Fireman, MTS And Tradesman</p>
  <p id="currentDate" style="font-size: 12px; color: #888;"></p>
                                     </div>
                                 </div>
@@ -230,7 +230,7 @@
                                     </div>
                                     <div class="secondBoundary">
                                         <h6>Indian Railway Recruit...</h6>
-                                        <p>10th Pass Apply Now</p>
+                                        <p style="margin: 0;">10th Pass Apply Now</p>
  <p id="currentDate" style="font-size: 12px; color: #888;"></p>
                                     </div>
                                 </div>
@@ -243,7 +243,7 @@
                                     </div>
                                     <div class="secondBoundary">
                                         <h6>Odisha Block Level Job</h6>
-                                        <p>Apply Offline For Various Posts </p>
+                                        <p style="margin: 0;>Apply Offline For Various Posts </p>
  <p id="currentDate" style="font-size: 12px; color: #888;"></p>
                                     </div>
                                 </div>
@@ -256,7 +256,7 @@
                                     </div>
                                     <div class="secondBoundary">
                                         <h6>Block Level Bank Mitra</h6>
-                                        <p> 10th,12th Pass Apply</p>
+                                        <p style="margin: 0;"> 10th,12th Pass Apply</p>
  <p id="currentDate" style="font-size: 12px; color: #888;"></p>
                                     </div>
                                 </div>
@@ -269,7 +269,7 @@
                                     </div>
                                     <div class="secondBoundary">
                                         <h6>Odisha Govt Peon Recrui...</h6>
-                                        <p>10th Pass Apply Offline</p>
+                                        <p style="margin: 0;">10th Pass Apply Offline</p>
  <p id="currentDate" style="font-size: 12px; color: #888;"></p>
                                     </div>
                                 </div>
@@ -281,7 +281,7 @@
                                     </div>
                                     <div class="secondBoundary">
                                         <h6>Postal Recruitment 2024</h6>
-                                       <p>10th Pass Apply Now</p>
+                                       <p style="margin: 0;">10th Pass Apply Now</p>
                                          <p id="currentDate" style="font-size: 12px; color: #888;"></p>
                                     </div>
                                 </div>
@@ -293,7 +293,7 @@
                                     </div>
                                     <div class="secondBoundary">
                                         <h6>TATA Steel Freshers Recruit...</h6>
-                                       <p> 2024 ! Apply Online</p>
+                                       <p style="margin: 0;"> 2024 ! Apply Online</p>
                                          <p id="currentDate" style="font-size: 12px; color: #888;"></p>
                                     </div>
                                 </div>
@@ -305,7 +305,7 @@
                                     </div>
                                     <div class="secondBoundary">
                                         <h6>Panchayat Level Jogana Sahayak</h6>
-                                       <p>  10th Pass Apply Offline Now</p>
+                                       <p style="margin: 0;">  10th Pass Apply Offline Now</p>
                                          <p id="currentDate" style="font-size: 12px; color: #888;"></p>
                                     </div>
                                 </div>
@@ -317,7 +317,7 @@
                                     </div>
                                     <div class="secondBoundary">
                                         <h6>Jindal Steel Plant Recruit..</h6>
-                                       <p> For 2000+ Posts</p>
+                                       <p style="margin: 0;"> For 2000+ Posts</p>
                                          <p id="currentDate" style="font-size: 12px; color: #888;"></p>
                                     </div>
                                 </div>
@@ -329,7 +329,7 @@
                                     </div>
                                     <div class="secondBoundary">
                                         <h6>RPF Recruitment 2024</h6>
-                                       <p> For Constable And SI Posts</p>
+                                       <p style="margin: 0;"> For Constable And SI Posts</p>
                                          <p id="currentDate" style="font-size: 12px; color: #888;"></p>
                                     </div>
                                 </div>
@@ -341,7 +341,7 @@
                                     </div>
                                     <div class="secondBoundary">
                                         <h6>Odisha Gram Panchayat Recru..</h6>
-                                       <p> Apply Offline For Various Posts</p>
+                                       <p style="margin: 0;"> Apply Offline For Various Posts</p>
                                          <p id="currentDate" style="font-size: 12px; color: #888;"></p>
                                     </div>
                                 </div>
@@ -353,7 +353,7 @@
                                     </div>
                                     <div class="secondBoundary">
                                         <h6>OPSC PGT Recruitment 2024 </h6>
-                                       <p>1375 Post Graduate Teacher Posts</p>
+                                       <p style="margin: 0;">1375 Post Graduate Teacher Posts</p>
                                          <p id="currentDate" style="font-size: 12px; color: #888;"></p>
                                     </div>
                                 </div>
@@ -365,7 +365,7 @@
                                         </div>
                                         <div class="secondBoundary">
                                             <h6>OSSSC RI,ARI & AMIN, SFS ICDS</h6>
-                                            <p>10+2, +3 Pass Apply Now
+                                            <p style="margin: 0;">10+2, +3 Pass Apply Now
                                             </p>
                                              <p id="currentDate" style="font-size: 12px; color: #888;"></p>
                                         </div>
@@ -378,7 +378,7 @@
                                         </div>
                                         <div class="secondBoundary">
                                             <h6>Odisha Forest Department 2024 </h6>
-                                            <p>12th Pass Apply Offline 
+                                            <p style="margin: 0;">12th Pass Apply Offline 
                                             </p>
                                         </div>
                                     </div>
@@ -402,7 +402,7 @@
                                     </div>
                                     <div class="secondBoundary">
                                         <h6>Income Tax Department </h6>
-                                        <p> Inspector, MTS And Clerk Posts
+                                        <p style="margin: 0;"> Inspector, MTS And Clerk Posts
                                         </p>
  <p id="currentDate" style="font-size: 12px; color: #888;"></p>
                                     </div>
