--- a/index.html
+++ b/index.html
@@ -196,6 +196,19 @@
                           <!--  BADGE -->
                                 <span class="badge rounded-pill bg-secondary p-1"  style="margin:10px">New Jobs</span>
                                   <!--  BADGE -->
+                                <a href="SubPages/2024/January/DetailsPages/NITRourkelaVacancy.html" class="nav-link ">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="SubPages/2024/January/images/NITRourkelaVacency.jpg" alt="" height="50px"
+                                            width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6>NIT Rourkela Vacancy 2024</h6>
+                                        <p>Salary 40,000 Per Month</p>
+
+                                    </div>
+                                </div>
+                            </a>
                                  <a href="SubPages/2024/January/DetailsPages/OdishaRTOOffice.html" class="nav-link ">
                                 <div class="firstBoundry">
                                     <div class="secondBoundary">
