--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                                     </div>
                                     <div class="secondBoundary">
                                         <h6>Odisha Block Level Job</h6>
-                                        <p style="margin: 0;>Apply Offline For Various Posts </p>
+                                        <p style="margin: 0;">Apply Offline For Various Posts </p>
  
                                     </div>
                                 </div>
