--- a/index.html
+++ b/index.html
@@ -196,6 +196,45 @@
                           <!--  BADGE -->
                                 <span class="badge rounded-pill bg-secondary p-1"  style="margin:10px">New Jobs</span>
                                   <!--  BADGE -->
+                                  <a href="SubPages/2024/January/DetailsPages/RRBGroupD.html" class="nav-link ">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="SubPages/2024/January/images/RRB-Group-D.jpg" alt=""
+                                            height="50px" width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6>RRB Group D Recruitment</h6>
+                                        <p>10th Pass Apply Online</p>
+
+                                    </div>
+                                </div>
+                            </a>
+                            <a href="SubPages/2024/January/DetailsPages/RRBAssistantLocoPilot.html" class="nav-link ">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="SubPages/2024/January/images/RRBAssistantLocoPilot.jpg" alt=""
+                                            height="50px" width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6>RRB Assistant Loco Pilot ALP</h6>
+                                        <p>For 5696 Posts</p>
+
+                                    </div>
+                                </div>
+                            </a>
+                            <a href="SubPages/2024/January/DetailsPages/OdishaCollectorOffice.html" class="nav-link ">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="SubPages/2024/January/images/OdishaImage.png" alt=""
+                                            height="50px" width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6>Odisha Collector Office Recruit..</h6>
+                                        <p>Salary 16,000 Per Month</p>
+
+                                    </div>
+                                </div>
+                            </a>
                                  <a href="SubPages/2024/January/DetailsPages/OdishaCollegePeon.html" class="nav-link ">
                                 <div class="firstBoundry">
                                     <div class="secondBoundary">
